...
    <string name="video_playback_retry">Повторить воспроизведение</string>
    <string name="video_playback_loading">Загрузка видео…</string>
    <string name="video_playback_error">Не удалось воспроизвести видео</string>
    <string name="video_playback_mute">Выключить звук</string>
    <string name="video_playback_unmute">Включить звук</string>
    <string name="video_playback_fullscreen">Полноэкранный режим</string>
    <string name="video_playback_exit_fullscreen">Выйти из полноэкранного режима</string>
    <string name="video_playback_position">%1$s / %2$s</string>
    <string name="video_playback_auth_error">Для просмотра видео войдите в аккаунт заново</string>
    <string name="video_playback_remote_error">Облачное видео недоступно. Проверьте подключение и повторите попытку</string>
    <string name="video_playback_transcode_error">Server could not transcode this video. Try again.</string>
    <string name="video_filmstrip_description">Seek within video</string>
    <string name="video_filmstrip_loading">Loading frames…</string>
...
